Bug 1043706 - Wrap ruby-specific rules in ua.css in a "supports" clause (to avoid spamming parse errors when ruby is disabled). r=dholbert
UltraBlame original commit: fc4786cdbbb8742612880df3a5c9b0cbc948a141

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -367,6 +367,13 @@ space
 inherit
 ;
 }
+supports
+(
+display
+:
+ruby
+)
+{
 *
 |
 *
@@ -465,6 +472,7 @@ text
 -
 container
 ;
+}
 }
 *
 |
